# glgears

./: .gitmodules  3dobject.cpp  3dobject.h  CMakeLists.txt  camera.cpp  camera.h  default.frag  default.vert  dlglad.sh  gear.cpp  gear.h  gears2.cpp  input.cpp  input.h  main.cpp  meson.build  readme.txt  run.sh  vector.h
glad/: glad.c  glad.h
